--- a/css/mstyle.css
+++ b/css/mstyle.css
@@ -6,6 +6,7 @@ body {
 	height: 97vh;
 	font-family: 'Exo', sans-serif;
 	text-align: center;
+	font-size: 16px;
 }
 header {
 	display: block;
@@ -80,9 +81,59 @@ h1 {
 	width: 90vw;
 	height: 80vh;
 	overflow: scroll;
-	left: 4.5vw;
 	position: absolute;
 	top: 15vh;
+	font-size: 4vw;
+	left: 2.5vw;
+}
+.container {
+	max-width: 88vw;
+	align-content: center;
+}
+h2, .field-block {
+	margin-top: 1vw;
+}
+
+.field-block label, .field-block .field {
+	display: block;
+	width: 81.5vw;
+	margin-left: 3px;
+}
+
+.field-block label {
+	margin-bottom: 8px;
+	font-weight: bold;
+}
+.field-block .field {
+	font-size: 16px;
+	padding: 8px 12px;
+	line-height: 1.5;
+	border: 1px solid #ccc;
+	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+	transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+.field-block .field:focus {
+  	border-color: #66afe9;
+  	outline: 0;
+  	box-shadow: inset 0 1px 1px #808080, 0 0 8px white;
+}
+.field-block textarea {
+	resize: vertical;
+}
+.check-text {
+	font-size: 18px;
+	vertical-align: top;
+}
+.button {
+	background-color: #808080;
+	cursor: pointer;
+	font-size: 20px;
+	padding: 6px 12px;
+	margin-bottom: 5px;
+	color: white;
+}
+#loader {
+	display: none;
 }
 @media screen and (orientation:landscape) {
     body {
@@ -99,5 +150,17 @@ h1 {
     h1 {
 		font-size: 6vw;
 		text-align: center;
+	}
+	.container {
+		max-width: 86vw;
+	}
+	.field-block label, .field-block .field {
+		width: 84vw;
+	}
+	#text {
+		left: 4vw;
+	}
+	.check-text {
+		vertical-align: middle;
 	}
 }
